fabric/testdata/out/ing_spp-product-search-spilo-get-api-product-queries-admins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e enableAccessLog(2, 4, 5) -\u003e
      unverifiedAuditLog(\"https://identity.zalando.com/managed-id\") -\u003e oauthTokeninfoAllScope(\"uid\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(5) \u0026\u0026
      Path(\"/api/product-queries\") \u0026\u0026 Method(\"GET\") \u0026\u0026 JWTPayloadAllKV(\"https://identity.zalando.com/realm\",
      \"users\") \u0026\u0026 JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\",
      \"kanli\", \"https://identity.zalando.com/managed-id\", \"jocarroll\", \"https://identity.zalando.com/managed-id\",
      \"rlagarferrei\", \"https://identity.zalando.com/managed-id\", \"abaquero\",
      \"https://identity.zalando.com/managed-id\", \"dgordon\", \"https://identity.zalando.com/managed-id\",
      \"pslowinski\") \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"1008b3b0-df8e-11e9-b4f9-021ccb7ebc56","deployment-id":"d-5hzopy8pcoq3eyeuzjimvncnd","pipeline-id":"l-hm6diyu6r83qkb7phpzcao5cz"},"name":"spp-product-search-spilo-get-api-product-queries-admins","namespace":"default"},"spec":{"rules":[{"host":"spp-product-search-spilo.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-search-spilo","servicePort":"htt [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> enableAccessLog(2, 4, 5) -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(5) && Path("/api/product-queries") && Method("GET")
      && JWTPayloadAllKV("https://identity.zalando.com/realm", "users") && JWTPayloadAnyKV("https://identity.zalando.com/managed-id",
      "kanli", "https://identity.zalando.com/managed-id", "jocarroll", "https://identity.zalando.com/managed-id",
      "rlagarferrei", "https://identity.zalando.com/managed-id", "abaquero", "https://identity.zalando.com/managed-id",
      "dgordon", "https://identity.zalando.com/managed-id", "pslowinski") && Header("X-Forwarded-Proto",
      "https")
  creationTimestamp: "2019-09-25T12:14:45Z"
  generation: 1
  labels:
    controller-uid: 1008b3b0-df8e-11e9-b4f9-021ccb7ebc56
    deployment-id: d-5hzopy8pcoq3eyeuzjimvncnd
    pipeline-id: l-hm6diyu6r83qkb7phpzcao5cz
  name: spp-product-search-spilo-get-api-product-queries-admins
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-search-spilo
    uid: 1008b3b0-df8e-11e9-b4f9-021ccb7ebc56
  resourceVersion: "1357490021"
  uid: 100fe36c-df8e-11e9-b86e-06b776ba507c
spec:
  rules:
  - host: spp-product-search-spilo.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-spilo
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-product-search-spilo-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-spilo
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
